--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,95 @@
+# =========================
+# Dependencies
+# =========================
+node_modules/
+.pnp/
+.pnp.js
+
+# =========================
+# Next.js build output
+# =========================
+.next/
+out/
+dist/
+build/
+
+# =========================
+# Environment variables (CRITICAL)
+# =========================
+.env
+.env.*
+!.env.example
+
+# =========================
 # Logs
-logs
-*.log
+# =========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+*.log
 
-.env
-node_modules
-dist
-dist-ssr
-*.local
-.env.local
-
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# =========================
+# OS / Editor junk
+# =========================
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# =========================
+# Turbopack / cache
+# =========================
+.turbo/
+.cache/
+
+# =========================
+# Testing / coverage
+# =========================
+coverage/
+*.lcov
+
+# =========================
+# Temporary / misc
+# =========================
+tmp/
+temp/
+*.tmp
+
+# =========================
+# Certificates / keys
+# =========================
+*.pem
+*.key
+*.crt
+
+# =========================
+# Local database / uploads
+# =========================
+*.sqlite
+*.db
+uploads/
+
+# =========================
+# AI / secrets safety net
+# =========================
+*.secret
+*.secrets
+*apikey*
+*api-key*
+*access-token*
+*auth-token*
+*private-key*
+*ssh-key*
+*credentials*   
+*config.json
+*config.yaml
+*config.yml
+*secrets.json
+*secrets.yaml
+*secrets.yml
+*.env.local
+*.env.development.local
+*.env.test.local
